migrated sparky to wicked-playground-sparky